--- a/xmp-core/pom.xml
+++ b/xmp-core/pom.xml
@@ -5,11 +5,11 @@
 
   <parent>
     <groupId>org.verapdf</groupId>
-    <artifactId>verapdf-library</artifactId>
+    <artifactId>verapdf-library-jakarta</artifactId>
     <version>1.23.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>verapdf-xmp-core</artifactId>
+  <artifactId>verapdf-xmp-core-jakarta</artifactId>
 
   <name>veraPDF PDF/A XMP Library Core</name>
   <description>Core components for the veraPDF PDF/A XMP Parsing and Validation library.</description>
