--- a/xmp-core-coverage/pom.xml
+++ b/xmp-core-coverage/pom.xml
@@ -5,11 +5,11 @@
 
   <parent>
     <groupId>org.verapdf</groupId>
-    <artifactId>verapdf-library</artifactId>
+    <artifactId>verapdf-library-javax</artifactId>
     <version>1.23.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>verapdf-xmp-core-coverage</artifactId>
+  <artifactId>verapdf-xmp-core-coverage-javax</artifactId>
 
   <name>veraPDF PDF/A XMP Library Core Coverage</name>
   <description>Coverage and tests for core components for the veraPDF PDF/A XMP Parsing and Validation library.</description>
@@ -26,7 +26,7 @@
   <dependencies>
     <dependency>
       <groupId>org.verapdf</groupId>
-      <artifactId>verapdf-xmp-core</artifactId>
+      <artifactId>verapdf-xmp-core-javax</artifactId>
       <version>${project.version}</version>
     </dependency>
   </dependencies>
