--- a/core/pom.xml
+++ b/core/pom.xml
@@ -26,24 +26,24 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <artifactId>verapdf-library</artifactId>
+    <artifactId>verapdf-library-arlington</artifactId>
     <groupId>org.verapdf</groupId>
     <version>1.23.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>core</artifactId>
+  <artifactId>core-arlington</artifactId>
   <name>veraPDF Library core</name>
   <description>Core classes for the veraPDF Library.</description>
 
   <dependencies>
     <dependency>
       <groupId>org.verapdf</groupId>
-      <artifactId>pdf-model</artifactId>
+      <artifactId>pdf-model-arlington</artifactId>
     </dependency>
 
     <dependency>
       <groupId>org.verapdf</groupId>
-      <artifactId>verapdf-xmp-core</artifactId>
+      <artifactId>verapdf-xmp-core-arlington</artifactId>
       <version>${project.version}</version>
     </dependency>
 
