--- a/xmp-core-coverage/pom.xml
+++ b/xmp-core-coverage/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.verapdf</groupId>
     <artifactId>verapdf-library-jakarta</artifactId>
-    <version>1.23.0-SNAPSHOT</version>
+    <version>1.24.0-RC1</version>
   </parent>
 
   <artifactId>verapdf-xmp-core-coverage-jakarta</artifactId>
