--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -9,16 +9,19 @@ on:
 jobs:
   build:
     name: Checkout and Build
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
+
+    continue-on-error: true
 
     strategy:
+      fail-fast: false
       matrix:
-        java-version: [11, 16, 17]
+        java-version: [11, 16, 17, 21]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: JDK setup
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v4
         with:
           java-version: ${{ matrix.java-version }}
           distribution: 'temurin'
@@ -27,18 +30,18 @@ jobs:
         run: mvn --batch-mode --update-snapshots verify
       - name: Upload coverage report
         if: matrix.java-version == 8
-        uses: actions/upload-artifact@master
+        uses: actions/upload-artifact@v4
         with:
           name: coverage-report
           path: core/target/site/jacoco/
   coverage:
     name: Quality Assurance
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     needs: [ build ]
 
     steps:
       - name: Download coverage report
-        uses: actions/download-artifact@master
+        uses: actions/download-artifact@v4
         with:
           name: coverage-report
           path: core/target/site/jacoco/
