--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,7 @@
       <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-api</artifactId>
+        <version>5.10.2</version>
         <scope>test</scope>
       </dependency>
 
@@ -132,12 +133,14 @@
       <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-engine</artifactId>
+        <version>5.10.2</version>
         <scope>test</scope>
       </dependency>
 
       <dependency>
         <groupId>org.junit.vintage</groupId>
         <artifactId>junit-vintage-engine</artifactId>
+        <version>5.10.2</version>
         <scope>test</scope>
       </dependency>
 
