Default logging level replaced from INFO to CONFIG

--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -51,6 +51,7 @@ jobs:
           files: core/target/site/jacoco/jacoco.xml
           fail_ci_if_error: true # optional (default = false)
           verbose: true # optional (default = false)
+          token: ${{ secrets.CODECOV_TOKEN }}
       - name: Codacy coverage reporting
         uses: codacy/codacy-coverage-reporter-action@v1
         with:
