--- a/core/src/main/resources/org/verapdf/processor/logging.properties
+++ b/core/src/main/resources/org/verapdf/processor/logging.properties
@@ -1,12 +1,12 @@
 handlers = org.verapdf.core.utils.LogsFileHandler java.util.logging.ConsoleHandler
-.level = INFO
+.level = CONFIG
 
-java.util.logging.ConsoleHandler.level = INFO
+java.util.logging.ConsoleHandler.level = CONFIG
 java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 java.util.logging.ConsoleHandler.filter = org.verapdf.core.utils.ConsoleLogsFilter
 java.util.logging.ConsoleHandler.encoding = UTF-8
 
-org.verapdf.core.utils.LogsFileHandler.level = INFO
+org.verapdf.core.utils.LogsFileHandler.level = CONFIG
 # creates file in temp dir, adds process id to the beginning of filename and pattern as a suffix
 org.verapdf.core.utils.LogsFileHandler.pattern = .log
 org.verapdf.core.utils.LogsFileHandler.append = true
