--- a/.github/workflows/update-arlington-workflow.yml
+++ b/.github/workflows/update-arlington-workflow.yml
@@ -18,6 +18,8 @@ on:
       - 'core/src/main/resources/org/verapdf/pdfa/validation/PDFA-4F.xml'
       - 'core/src/main/resources/org/verapdf/pdfa/validation/PDFUA-1.xml'
       - 'core/src/main/resources/org/verapdf/pdfa/validation/PDFUA-2-ISO32005.xml'
+      - 'core/src/main/resources/org/verapdf/pdfa/validation/WTPDF-1-0-Accessibility.xml'
+      - 'core/src/main/resources/org/verapdf/pdfa/validation/WTPDF-1-0-Reuse.xml'
 
 jobs:
   checkout-and-build:
