--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java-version: [11, 16, 17, 21]
+        java-version: [11, 17, 21]
 
     steps:
       - uses: actions/checkout@v4
