--- a/pom.xml
+++ b/pom.xml
@@ -28,12 +28,12 @@
   <parent>
     <groupId>org.verapdf</groupId>
     <artifactId>verapdf-parent</artifactId>
-    <version>1.26.1</version>
+    <version>1.26.2</version>
   </parent>
 
   <groupId>org.verapdf</groupId>
   <artifactId>verapdf-library</artifactId>
-  <version>1.26.0-RC1</version>
+  <version>1.26.0</version>
   <packaging>pom</packaging>
 
   <name>veraPDF PDF/A Validation Library</name>
@@ -72,7 +72,7 @@
   </scm>
 
   <properties>
-    <verapdf.model.version>[1.26.0-RC,1.27.0)</verapdf.model.version>
+    <verapdf.model.version>[1.26.0,1.27.0)</verapdf.model.version>
     <sonar.jacoco.itReportPath>${project.basedir}/../target/jacoco-it.exec</sonar.jacoco.itReportPath>
     <sonar.language>java</sonar.language>
   </properties>
