--- a/xmp-core/pom.xml
+++ b/xmp-core/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.verapdf</groupId>
     <artifactId>verapdf-library-arlington</artifactId>
-    <version>1.25.0-SNAPSHOT</version>
+    <version>1.26.0</version>
   </parent>
 
   <artifactId>verapdf-xmp-core-arlington</artifactId>
