--- a/xmp-core-coverage/pom.xml
+++ b/xmp-core-coverage/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.verapdf</groupId>
     <artifactId>verapdf-library</artifactId>
-    <version>1.27.0-SNAPSHOT</version>
+    <version>1.28.0-RC1</version>
   </parent>
 
   <artifactId>verapdf-xmp-core-coverage</artifactId>
