--- a/xmp-core-coverage/pom.xml
+++ b/xmp-core-coverage/pom.xml
@@ -11,7 +11,7 @@
 
   <artifactId>verapdf-xmp-core-coverage-jakarta</artifactId>
 
-  <name>veraPDF PDF/A XMP Library Core Coverage</name>
+  <name>veraPDF XMP Library Core Coverage</name>
   <description>Coverage and tests for core components for the veraPDF PDF/A XMP Parsing and Validation library.</description>
 
   <url>https://github.com/veraPDF/veraPDF-xmp/</url>
