--- a/xmp-core-coverage/pom.xml
+++ b/xmp-core-coverage/pom.xml
@@ -11,8 +11,8 @@
 
   <artifactId>verapdf-xmp-core-coverage-jakarta</artifactId>
 
-  <name>veraPDF XMP Library Core Coverage</name>
-  <description>Coverage and tests for core components for the veraPDF XMP Parsing and Validation library.</description>
+  <name>veraPDF XMP Library Core Coverage for Jakarta EE</name>
+  <description>Coverage and tests for core components for the veraPDF XMP Parsing and Validation library with Jakarta EE support.</description>
 
   <url>https://github.com/veraPDF/veraPDF-xmp/</url>
   <licenses>
