--- a/pom.xml
+++ b/pom.xml
@@ -36,8 +36,8 @@
   <version>1.27.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
-  <name>veraPDF Validation Library</name>
-  <description>veraPDF Validation API and core types.</description>
+  <name>veraPDF Validation Library for Arlington PDF Model</name>
+  <description>veraPDF Validation API and core types of Arlington PDF Model.</description>
 
   <repositories>
     <repository>
