--- a/xmp-core/pom.xml
+++ b/xmp-core/pom.xml
@@ -11,8 +11,8 @@
 
   <artifactId>verapdf-xmp-core-arlington</artifactId>
 
-  <name>veraPDF XMP Library Core</name>
-  <description>Core components for the veraPDF XMP Parsing and Validation library.</description>
+  <name>veraPDF XMP Library Core for Arlington PDF Model</name>
+  <description>Core components for the veraPDF XMP Parsing and Validation library of Arlington PDF Model.</description>
 
   <licenses>
     <license>
