--- a/pom.xml
+++ b/pom.xml
@@ -28,12 +28,12 @@
   <parent>
     <groupId>org.verapdf</groupId>
     <artifactId>verapdf-parent</artifactId>
-    <version>1.27.2</version>
+    <version>1.28.1</version>
   </parent>
 
   <groupId>org.verapdf</groupId>
   <artifactId>verapdf-library-arlington</artifactId>
-  <version>1.27.0-SNAPSHOT</version>
+  <version>1.28.0-RC1</version>
   <packaging>pom</packaging>
 
   <name>veraPDF Validation Library for Arlington PDF Model</name>
@@ -72,7 +72,7 @@
   </scm>
 
   <properties>
-    <verapdf.model.version>[1.27.0,1.28.0-RC)</verapdf.model.version>
+    <verapdf.model.version>[1.28.0-RC,1.29.0)</verapdf.model.version>
     <sonar.jacoco.itReportPath>${project.basedir}/../target/jacoco-it.exec</sonar.jacoco.itReportPath>
     <sonar.language>java</sonar.language>
   </properties>
