--- a/core/pom.xml
+++ b/core/pom.xml
@@ -28,7 +28,7 @@
   <parent>
     <artifactId>verapdf-library-arlington</artifactId>
     <groupId>org.verapdf</groupId>
-    <version>1.28.0-RC1</version>
+    <version>1.28.0</version>
   </parent>
 
   <artifactId>core-arlington</artifactId>
