--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,12 @@
         <version>4.0.2</version>
       </dependency>
 
+      <dependency>
+        <groupId>net.sf.saxon</groupId>
+        <artifactId>Saxon-HE</artifactId>
+        <version>12.8</version>
+      </dependency>
+
     </dependencies>
   </dependencyManagement>
 
